2005-12-28  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/Makefile.am
	* ext/neon:
	* ext/neon/Makefile.am:
	* ext/neon/gstneonhttpsrc.c:
	* ext/neon/gstneonhttpsrc.h:
	Created new element neonhttpsrc.

2005-12-19  Edward Hervey  <edward@fluendo.com>

	* ext/swfdec/gstswfdec.c: (gst_swfdec_class_init),
	(gst_swfdec_chain), (gst_swfdec_render):
	Add debugging category and return GstFlowReturn in the right places
	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_link):
	Get something from the peer pad once we've checked if there is a peer pad.
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_change_state),
	(qtdemux_tree_get_child_by_type), (qtdemux_parse_trak),
	(qtdemux_video_caps):
	Couple of fixes

2005-12-19  Edgard Lima <edgard.lima@indt.org.br>

	* ext/divx/Makefile.am:
	just a small fix. I have to pay more attention when commiting ;-)

2005-12-19  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/Makefile.am:
	* ext/divx/Makefile.am:
	* ext/divx/gstdivxdec.c:
	* ext/divx/gstdivxdec.h:
	* ext/divx/gstdivxenc.c:
	* ext/divx/gstdivxenc.h:
	divxdec and divxenc ported to 0.10
	
2005-12-18  Julien MOUTTE  <julien@moutte.net>

	* docs/plugins/gst-plugins-bad-plugins-decl.txt:
	* ext/directfb/dfbvideosink.c: (gst_dfbvideosink_surface_create),
	(gst_dfbvideosink_event_thread), (gst_dfbvideosink_enum_devices),
	(gst_dfbvideosink_setup), (gst_dfbvideosink_cleanup),
	(gst_dfbvideosink_can_blit_from_format),
	(gst_dfbvideosink_getcaps), (gst_dfbvideosink_setcaps),
	(gst_dfbvideosink_show_frame), (gst_dfbvideosink_buffer_alloc),
	(gst_dfbsurface_finalize),
	(gst_dfbvideosink_navigation_send_event),
	(gst_dfbvideosink_update_colorbalance),
	(gst_dfbvideosink_set_property), (gst_dfbvideosink_init): Some
	more refactoring, handle exotic DirectFB row stride.

2005-12-18  Julien MOUTTE  <julien@moutte.net>

	* docs/plugins/gst-plugins-bad-plugins-decl.txt:
	* docs/plugins/gst-plugins-bad-plugins-undocumented.txt: Updates.